# RekkonMMALCamera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake.in  rekkoncamcontrol.cpp  rekkoncamcontrol.h  videommalobject.cpp  videommalobject.h
dependencies/: bcm_host.h
